tests/baselines/reference/arrowFunctionInConstructorArgument1.errors.txt
==== tests/cases/compiler/arrowFunctionInConstructorArgument1.ts (1 errors) ====
    class C {
        constructor(x: () => void) { }
    }
    var c = new C(() => { return asdf; } ) // should error
                                 ~~~~
!!! arrowFunctionInConstructorArgument1.ts(4,30): error TS2095: Could not find symbol 'asdf'.
    